<menu xmlns:android="http://schemas.android.com/apk/res/android" >

    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/action_settings">
		<menu>
		    <group android:checkableBehavior="single">
		        <item android:id="@+id/enableShredding"
		              android:title="@string/enableShredding" />
		        <item android:id="@+id/disableShredding"
		              android:title="@string/disableShredding"
		              android:checked="true" />
		    </group>		    
	    </menu>
    </item>
    
    <item
        android:id="@+id/action_help"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/action_help"/>
    
    <item 
        android:id="@+id/action_logs"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/action_logs"/>
    
</menu>
